Fix event title overflow on mobile

--- a/src/components/EventBlocks/stylesheet.scss
+++ b/src/components/EventBlocks/stylesheet.scss
@@ -4,6 +4,9 @@
   .ids {
     .event-name {
       flex: 1;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 }
