--- a/src/components/TimeBlocks/stylesheet.scss
+++ b/src/components/TimeBlocks/stylesheet.scss
@@ -128,12 +128,6 @@
     .meeting-wrapper {
       padding: 2px;
       height: 100%;
-      .ids {
-        flex-shrink: 1;
-      }
-      .period {
-        flex-shrink: 0;
-      }
 
       span {
         white-space: normal;
